[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/HealArea/HealArea.gd" type="Script" id=1]

[node name="HealArea" type="Area2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="TickTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_HealArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_HealArea_body_exited"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
